bloembraaden/_front/admin.css
:root {
    --admin-color-accent: rgb(48, 63, 123);
    --admin-color-accent-transparent: rgba(48, 63, 123, .4);
    --admin-color-accent-light: rgb(164, 164, 164);
    --admin-color-paper: rgb(253, 253, 255);
    --admin-color-paper-see-through: rgba(253, 253, 255, .9);
    --admin-color-key: rgb(44, 44, 52);
    --admin-color-accent-neutral: rgba(0, 0, 0, .09);
    --admin-color-accent-fierce: rgb(255, 166, 0);
    --admin-color-no: rgb(200, 0, 0);
    --admin-color-no-bg: rgba(200, 0, 0, .25);
    --admin-color-ok: rgb(0, 180, 60);
    --admin-color-ok-bg: rgba(0, 180, 60, .25);
    --admin-sidebar-width: 333px;
    --admin-console-height: 222px;
}

.dark-mode {
    --admin-color-accent: rgb(108, 149, 252);
    --admin-color-accent-transparent: rgba(108, 149, 252, .4);
    --admin-color-accent-light: rgb(76, 76, 76);
    --admin-color-paper: rgb(44, 44, 52);
    --admin-color-paper-see-through: rgba(44, 44, 52, .9);
    --admin-color-key: rgb(224, 224, 224);
    --admin-color-accent-neutral: rgba(0, 0, 0, .27);
    --admin-color-no: rgb(180, 0, 0);
    --admin-color-no-bg: rgba(180, 0, 0, .42);
    --admin-color-ok: rgb(0, 145, 45);
    --admin-color-ok-bg: rgba(0, 145, 45, .25);
}

/* neutralize header and footer */
.PEATCMS_admin header, .PEATCMS_admin footer {
    margin: 0;
    padding: 0;
    width: 100%;
    max-width: 100%;
    background-color: transparent;
}

.bloembraaden-icon {
    max-height: 1.4em;
    max-width: 1.4em;
    width: 1.4em;
    margin-bottom: -.3em;
}

.bloembraaden-icon svg {
    width: 100%;
    height: 100%;
}

.bloembraaden-icon .st0 {
    opacity: 0.81;
    fill: var(--admin-color-accent);
}

/*
 * dark mode admin page adjustments / corrections
 */
#PEATCMS_admin_page {
    background-color: inherit;
    height: auto;
}

#PEATCMS_admin_page td {
    color: var(--admin-color-key);
}

#PEATCMS_admin_page [type="file"] {
    color: var(--admin-color-key);
}

/*
 * admin page specific styles
 */
#PEATCMS_admin_page :focus {
    outline: 0;
}

#PEATCMS_admin_page img {
    display: block;
    line-height: 0;
    border: 0;
}

#PEATCMS_admin_page em {
    font-style: italic;
}

#PEATCMS_admin_page strong {
    font-weight: 700;
}

#PEATCMS_admin_page {
    background-color: var(--admin-color-paper);
    background-image: none;
    min-height: 100vh;
    padding: 1rem;
    width: auto;
}

#PEATCMS_admin_page .toggle {
    height: 2rem;
    overflow: hidden; /* open / close handled by button.toggle */
    transition: height .4s;
}

#PEATCMS_admin_page .toggle.open {
    height: auto;
    margin-bottom: .5rem;
}

#PEATCMS_admin_page .toggle header {
    height: 2rem;
}

#PEATCMS_admin_page .toggle header * {
    text-decoration: none;
    font-weight: normal;
    margin-right: .2rem;
}

#PEATCMS_admin_page .toggle .toggle_button:after {
    content: '\25B6';
    font-weight: bold;
    display: inline-block;
}

#PEATCMS_admin_page .toggle.open > header > .toggle_button:after {
    transform: rotateZ(90deg);
}

#PEATCMS_admin_page .toggle .toggle {
    margin-left: 1.6em; /* indent for a bit */
}

.PEATCMS_admin .info,
#PEATCMS_admin_page .info {
    opacity: .8;
}

/**
 * reset some stuff that might be changed by a client css
 */
#admin_wrapper *,
#admin_console *,
#quickie-modal *,
#admin_sidebar .edit-area * {
    font-family: 'Arial', sans-serif;
    font-size: 16px;
    line-height: 1.5em;
    letter-spacing: 0;
    font-style: normal;
}

.PEATCMS_admin, .PEATCMS_admin * {
    opacity: 1;
}

.dark-mode .edit-area *,
.edit-area * {
    color: var(--admin-color-key);
}

#PEATCMS_admin_page section {
    width: 100%;
    max-width: 100%;
    margin: auto;
    background-color: var(--admin-color-paper);
    overflow-x: auto;
}

/**
 * hide lingering (non-admin) elements
 */
#PEATCMS_admin_page > *:not(#message_wrapper):not(.PEATCMS_admin) {
    display: none;
}

/**
 * generic
 */
[data-done="true"] {
    color: var(--admin-color-ok) !important;
}

[data-done="false"] {
    color: var(--admin-color-no) !important;
}

[data-has-modal] {
    overflow: hidden;
}

.PEATCMS_admin [data-disabled="1"] {
    display: none !important;
}

#PEATCMS_admin_page #PEATCMS_edit_menu {
    display: none;
}

#PEATCMS_admin_page .page_content label {
    display: inline-block;
    width: 160px;
}

#PEATCMS_admin_page .PEATCMS_admin input[type="checkbox"] + label {
    max-width: inherit;
    width: auto;
}

#PEATCMS_admin_page :not(.edit-area) > input[type=password],
#PEATCMS_admin_page :not(.edit-area) > input[type=email],
#PEATCMS_admin_page :not(.edit-area) > input[type=text]:not(.searchable) {
    background-color: inherit;
    font-size: inherit;
    min-width: 160px;
    width: 50vw;
    border: 0;
    border-bottom: solid 1px var(--admin-color-key);
}

/**
 * publish button and functionality
 */
#quickie-modal [type="submit"],
#peatcms_publish {
    margin: .25rem .5rem;
    padding: .25rem;
    background-color: var(--admin-color-accent);
    border-radius: .25rem;
    position: absolute;
    top: 2.08rem;
    right: 0;
}

#quickie-modal [type="submit"] {
    position: relative;
    top: 0;
    margin: 2rem 0;
}

#quickie-modal [type="submit"]:after,
#peatcms_publish:after {
    content: 'Publish';
    font-weight: bold;
    color: var(--admin-color-paper);
}

#quickie-modal [type="submit"][disabled],
#peatcms_publish.published {
    background-color: var(--admin-color-accent-neutral);
}

.template.published:after,
#peatcms_publish.published:before {
    content: '\2713';
    color: var(--admin-color-ok);
    font-weight: bold;
    margin-left: .2em;
}

#quickie-modal [type="submit"].published:after,
#peatcms_publish.published:after {
    content: 'Published';
    font-weight: normal;
    color: var(--admin-color-accent-light);
}

.template {
    display: table-row;
}

.template > *:first-child {
    text-transform: capitalize;
}

.template > * {
    padding-right: .5rem;
    color: var(--admin-color-key);
    display: table-cell;
}
/* ... */

